crud paciente y medico completa

--- a/front-end/plantilla CRUD/crudMedico.html
+++ b/front-end/plantilla CRUD/crudMedico.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD Example with Bootstrap</title>
+    <title>CRUD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-4">CRUD Example with Bootstrap</h1>
+        <h1 class="text-center my-4">CRUD MEDICO</h1>
 
         <div class="row mb-4">
             <div class="col-md-12">
                 <h2>Usuarios Registrados</h2>
                 <div class="mb-3">
-                    <button type="button" class="btn btn-primary mr-2" data-toggle="modal" data-target="#userModal">Registrar Nuevo Usuario</button>
-                    <button type="button" class="btn btn-danger mr-2" id="deleteSelectedBtn">Eliminar Usuario </button>
-                    <button type="button" class="btn btn-warning" id="editSelectedBtn">Editar Usuario </button>
+                    <button type="button" class="btn btn-primary mr-2" data-toggle="modal" data-target="#userModal">Registrar Nuevo </button>
+                    <button type="button" class="btn btn-primary mr-2" id="deleteSelectedBtn">Eliminar </button>
+                    <button type="button" class="btn btn-primary" id="editSelectedBtn">Editar </button>
                 </div>
-                <table id="userTable" class="table">
+                <table id="userTable " class=" table border border-5 border-primary">
                     <thead>
                         <tr>
                             <th>ID</th>
