--- a/front-end/plantilla CRUD/crudMedico.html
+++ b/front-end/plantilla CRUD/crudMedico.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD</title>
+    <title>CRUD </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,11 +15,11 @@
             <div class="col-md-12">
                 <h2>Usuarios Registrados</h2>
                 <div class="mb-3">
-                    <button type="button" class="btn btn-primary mr-2" data-toggle="modal" data-target="#userModal">Registrar Nuevo </button>
-                    <button type="button" class="btn btn-primary mr-2" id="deleteSelectedBtn">Eliminar </button>
-                    <button type="button" class="btn btn-primary" id="editSelectedBtn">Editar </button>
+                    <button type="button" class="btn btn-primary mr-2" data-toggle="modal" data-target="#userModal">Registrar Nuevo Usuario</button>
+                    <button type="button" class="btn btn-danger mr-2" id="deleteSelectedBtn">Eliminar Usuario </button>
+                    <button type="button" class="btn btn-warning" id="editSelectedBtn">Editar Usuario </button>
                 </div>
-                <table id="userTable " class=" table border border-5 border-primary">
+                <table id="userTable border" class="table">
                     <thead>
                         <tr>
                             <th>ID</th>
