--- a/front-end/plantilla CRUD/crudMedico.html
+++ b/front-end/plantilla CRUD/crudMedico.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="listarMedico();">
     <div class="container">
         <h1 class="text-center my-4">CRUD MEDICO</h1>
 
@@ -16,26 +16,24 @@
                 <h2>Usuarios Registrados</h2>
                 <div class="mb-3">
                     <button type="button" class="btn btn-primary mr-2" data-toggle="modal" data-target="#userModal">Registrar Nuevo Usuario</button>
-                    <button type="button" class="btn btn-danger mr-2" id="deleteSelectedBtn">Eliminar Usuario </button>
-                    <button type="button" class="btn btn-warning" id="editSelectedBtn">Editar Usuario </button>
+
                 </div>
                 <table id="userTable border" class="table">
                     <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>Documento de Identidad</th>
-                            <th>Primer Nombre</th>
-                            <th>Primer Apellido</th>
-                            <th>Segundo Apellido</th>
-                            <th>Celular</th>
-                            <th>Correo</th>
-                            <th>Estado</th>
-                            <th>Acciones</th>
+                            <td>Id</td>
+                            <td>Documento de Identidad</td>
+                            <td>Primer Nombre</td>
+                            <td>Primer Apellido</td>
+                            <td>Segundo Apellido</td>
+                            <td>Celular</td>
+                            <td>Correo</td>
+                            <td>Estado</td>
+                            <td>Acciones</td>
                         </tr>
                     </thead>
-                    <tbody>
-                        <!-- Aquí se mostrarán los usuarios registrados -->
-                    </tbody>
+
+                    
                 </table>
             </div>
         </div>
@@ -94,10 +92,18 @@
             </div>
         </div>
     </div>
+    <tbody id="cuerpoTablaMedico">
+                    
+        <!-- Aquí se mostrarán los usuarios registrados -->
+    </tbody>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="../JS/medico.js"></script>
 </body>
 </html>
