Diccionario Uros Actualizado

--- a/front-end/inicio.html
+++ b/front-end/inicio.html
@@ -73,7 +73,7 @@
         <div class="btn-group" role="group" aria-label="Opciones">
             <div class="row row-cols-1 row-cols-md-3 g-4" style="margin: auto; height: 800px;">
                 <div class="col">
-                    <div class="card">
+                    <div class="card" style="width: 85%;">
                         <img src="./IMG/paciente.jpg" class="card-img-top" alt="" width="600px" height="500px">
                         <div class="card-body">
                             <h1 class="card-title"></h1>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card" style="width: 85%; justify-content:center">
                         <img src="./IMG/fondo-inicio-1024x759.jpg" class="card-img-top" alt="" width="600px"
                             height="500px">
                         <div class="card-body">
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card" style="width: 85%;">
                         <img src="./IMG/registro.jpg" class="card-img-top" alt="" width="600px" height="500px">
                         <div class="card-body">
                             <h1 class="card-title"></h1>
