--- a/front-end/inicio.html
+++ b/front-end/inicio.html
@@ -18,9 +18,11 @@
         }
 
         .jumbotron {
-            background-color: #faf8f8;
+            background-color: rgb(219, 255, 252);
             padding: 0px 0;
             text-align: center;
+            opacity: 1 ;
+
         }
 
         .btn-group {
@@ -124,6 +126,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
-</bo    dy>
+    
+
+</body>
 
 </html>
