Cambios en los botones js medico

--- a/front-end/plantilla CRUD/crudPaciente.html
+++ b/front-end/plantilla CRUD/crudPaciente.html
@@ -35,7 +35,7 @@
                             <th>Telefono contacto</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="cuerpoTablaPaciente">
                         <!-- Aquí se mostrarán los usuarios registrados -->
                     </tbody>
                 </table>
