--- a/front-end/plantilla CRUD/crudMedico.html
+++ b/front-end/plantilla CRUD/crudMedico.html
@@ -20,16 +20,16 @@
                 <table id="userTable border" class="table">
                     <thead>
                         <tr>
-                            <td><b>Id</b></td>
-                            <td><b>Documento de Identidad</b></td>
-                            <td><b>Primer Nombre</b></td>
-                            <td><b>Segundo Nombre</b></td>
-                            <td><b>Primer Apellido</b></td>
-                            <td><b>Segundo Apellido</b></td>
-                            <td><b>Correo</b></td>
-                            <td><b>Celular</b></td>
-                            <td><b>Estado</b></td>
-                            <td colspan="2"><b>Acciones</b></td>
+                            <td class="col-1"><b>Id</b></td>
+                            <td class="col-1"><b>Documento de Identidad</b></td>
+                            <td class="col-1"><b>Primer Nombre</b></td>
+                            <td class="col-1"><b>Segundo Nombre</b></td>
+                            <td class="col-1"><b>Primer Apellido</b></td>
+                            <td class="col-1"><b>Segundo Apellido</b></td>
+                            <td class="col-1"><b>Correo</b></td>
+                            <td class="col-1"><b>Celular</b></td>
+                            <td class="col-1"><b>Estado</b></td>
+                            <td class="col-2"><b>Acciones</b></td>
                                 
                             
                         </tr>
