--- a/front-end/inicio.html
+++ b/front-end/inicio.html
@@ -81,7 +81,7 @@
                             <h1 class="card-title"></h1>
                             <h5>En este fragmento se podra agregar, ver, editar, eliminar y saber el estado
                                 (habilitado/deshabilitado) de cualquier paciente registrado o por registrar.</h5>
-                            <button type="button" class="btn btn-success" style="width: 100%;">Paciente</button>
+                            <a type="button" class="btn btn-success" style="width: 100%;" href="./plantilla CRUD/crudPaciente.html" >Paciente</a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                             <h1 class="card-title"></h1>
                             <h5>En esta seccion se podra agregar, ver, editar, eliminar y saber el estado de
                                 cualquier medico registrado o por registrar.</h5>
-                            <button type="button" class="btn btn-success" style="width: 100%;">Médico</button>
+                            <a type="button" class="btn btn-success" style="width: 100%;" href="./plantilla CRUD/crudMedico.html" >Médico</a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                             <h1 class="card-title"></h1>
                             <h5>En este apartado se podra agregar, ver, editar, eliminar y saber el estado de to las
                                 personas registradas.</h5>
-                            <button type="button" class="btn btn-success" style="width: 100%">Registro</button>
+                                <a type="button" class="btn btn-success" style="width: 100%;" href="./plantilla CRUD/" >Registro</a>
                         </div>
                     </div>
                 </div>
