--- a/front-end/plantilla CRUD/ingreso.html
+++ b/front-end/plantilla CRUD/ingreso.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD </title>
+    <title>INGRESO </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="listarPaciente();">
+<body onload="listarIngreso();">
     <div class="container">
-        <h1 class="text-center my-4">CRUD PACIENTE</h1>
+        <h1 class="text-center my-4">INGRESO</h1>
 
         <div class="row mb-4">
             <div class="col-md-12">
-                <h2>Usuarios Registrados</h2>
+                <h2>Ingreso de Usuarios</h2>
                 <div class="mb-3">
                     <button type="button" class="btn btn-primary mr-2">
                         <a href="../plantilla CRUD/registrarPaciente.html" style="color: white; text-decoration: none;">Registrar Nuevo Usuario</a>
@@ -22,20 +22,18 @@
                 <table id="userTable border" class="table">
                     <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>Documento de Identidad</th>
-                            <th>Primer Nombre</th>
-                            <th>Primer Apellido</th>
-                            <th>Segundo Apellido</th>
-                            <th>Celular</th>
-                            <th>Correo</th>
+                            <th>Id</th>
+                            <th>Habitación</th>
+                            <th>Cama</th>
+                            <th>Paciente</th>
+                            <th>Médico</th>
+                            <th>Fecha de ingreso</th>
+                            <th>Fecha de salida</th>
                             <th>Estado</th>
                             <th>Acciones</th>
-                            <th>Nombre de contacto </th>
-                            <th>Telefono contacto</th>
                         </tr>
                     </thead>
-                    <tbody id="cuerpoTablaPaciente">
+                    <tbody id="cuerpoTablaIngreso">
                         <!-- Aquí se mostrarán los usuarios registrados -->
                     </tbody>
                 </table>
@@ -43,7 +41,7 @@
         </div>
     </div>
 
-    <!--  
+    <!-- Modal -->
     <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="userModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -60,36 +58,28 @@
                             <input type="text" id="id" name="id" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="document">Documento de Identidad:</label>
+                            <label for="document">Habitación</label>
                             <input type="text" id="document" name="document" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="firstName">Primer Nombre:</label>
+                            <label for="firstName">Cama</label>
                             <input type="text" id="firstName" name="firstName" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="lastName">Primer Apellido:</label>
+                            <label for="lastName">Paciente</label>
                             <input type="text" id="lastName" name="lastName" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="secondLastName">Segundo Apellido:</label>
+                            <label for="secondLastName">Medico</label>
                             <input type="text" id="secondLastName" name="secondLastName" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="phone">Celular:</label>
+                            <label for="phone">Fecha de ingreso</label>
                             <input type="text" id="phone" name="phone" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Correo:</label>
+                            <label for="email">Fecha de salida</label>
                             <input type="email" id="email" name="email" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Nombre de contacto</label>
-                            <input type="text" id="contacto" name="contacto" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Numero de contacto</label>
-                            <input type="text" id="numcontacto" name="numcontacto" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label for="status">Estado:</label>
@@ -103,10 +93,10 @@
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="../JS/paciente.js"></script>
+    <script src="../JS/ingreso.js"></script>
 </body>
 </html>
