Se agrego el modal a crudMedico y se modifico el js medico

--- a/front-end/plantilla CRUD/registrarMedico.html
+++ b/front-end/plantilla CRUD/registrarMedico.html
@@ -53,13 +53,13 @@
                 <label for="" id="estado">Estado</label>
                 <select name=""  id="estado_medico" class="form-select">
                     <option value="" selected disabled></option>
-                    <option value="RC">Activo</option>
-                    <option value="TI">Inactivo</option>
+                    <option value="Activo">Activo</option>
+                    <option value="Inactivo">Inactivo</option>
                 </select>
             </div>
             <div class="buttom" style="padding-top: 3%;">
                 <button class="btn btn-success" onclick="registrarMedico();">Enviar</button>
-                <button class="btn btn-secondary">Limpiar</button>
+                <button class="btn btn-secondary" onclick="limpiar();">Limpiar</button>
             </div>
     </div>
 
