--- a/front-end/plantilla CRUD/registrarPaciente.html
+++ b/front-end/plantilla CRUD/registrarPaciente.html
@@ -60,7 +60,7 @@
         </div>
         <div class="buttom" style="padding-top: 3%;">
             <button class="btn btn-success" onclick="registrarPaciente();">Enviar</button>
-            <button class="btn btn-secondary">Limpiar</button>
+            <button class="btn btn-secondary" onclick="limpiar();">Limpiar</button>
         </div>
     </div>
 
