modificacion crudMedico y crudPaciente y sus js

--- a/front-end/plantilla CRUD/registrarMedico.html
+++ b/front-end/plantilla CRUD/registrarMedico.html
@@ -15,10 +15,10 @@
     <script src="../js/medico.js"></script>
 </head>
 
-<body style='background-image: src"../img/"; padding-top: 8%;'>
+<body style="padding-top: 8%;">
     <div class="container" style="background-color:rgba(0, 0, 0, 0.698); border-radius: 40px;">
         <div class="container" style="padding: 7%; color:white;">
-            <h1><b>Registrar Medico</b></h1>
+            <h1 style="padding-top: 5%;"><b>Registrar Medico</b></h1>
         <div class="row">
             <div class="col col-xl-6 col-12" style="padding-top: 2%;">
                 <label for="">Documento de identidad</label>
