--- a/front-end/plantilla CRUD/crudPaciente.html
+++ b/front-end/plantilla CRUD/crudPaciente.html
@@ -6,23 +6,27 @@
     <title>CRUD </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body onload="listarPaciente();">
-    <div class="container">
-        <h1 class="text-center my-4">CRUD PACIENTE</h1>
-
-        <div class="row mb-4">
-            <div class="col-md-12">
-                <h2>Usuarios Registrados</h2>
-                <div class="mb-3">
-                    <button type="button" class="btn btn-primary mr-2">
-                        <a href="../plantilla CRUD/registrarPaciente.html" style="color: white; text-decoration: none;">Registrar Nuevo Usuario</a>
-                    </button>
+    <div class="container-xxl" style="padding: 6%;">
+        <div class="col-md-12">
+            <div class="table tittle">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h1 style="padding-right: 45%;"><b>Pacientes Registrados</b></h1>
+                    </div>
+                    <div class="col-sm-6" style="padding-left:35%;">
+                        <button type="button" class="btn btn-success">
+                            <a href="../plantilla CRUD/registrarPaciente.html" style="color: white; text-decoration: none;">Registrar Nuevo Usuario</a>
+                        </button>
+                    </div>
                 </div>
-                <table id="userTable border" class="table">
+            </div>
+                <table id="table table-striped table-hover" class="table">
                     <thead>
                         <tr>
-                            <th>ID</th>
+                            <th>Id</th>
                             <th>Documento de Identidad</th>
                             <th>Primer Nombre</th>
                             <th>Primer Apellido</th>
@@ -42,7 +46,58 @@
             </div>
         </div>
     </div>
-
+    <div class="modal fade" id="exampleModal">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content" style="border-radius: 20px; padding: 4%; background-color:rgb(255, 255, 255);">
+            <div class="modal-body">
+                    <h1 style="padding-top: 5%;"><b>Registrar Paciente</b></h1>
+                <div style="padding: 3%; color:rgb(0, 0, 0);">
+                    <div class="row">
+                        <div class="col col-xl-6 col-12" style="padding-top:2%;">
+                            <label for="">Documento de identidad</label>
+                            <!--para que no acepte decimal se utiliza step-->
+                            <input type="text" id="doc_paciente"  step="1" class="form-control is-valid" onfocusout="validarNumeroDocumento(this);">
+                        </div>
+                        <div class="col col-xl-6 col-12" style="padding-top:2%;">
+                            <label for="">Primer Nombre</label>
+                            <input type="text" id="primer_nombre_paciente" class="form-control">
+                        </div>
+                        <div class="col col-xl-6 col-12" style="padding-top:2%;">
+                            <label for="">Segundo Nombre</label>
+                            <input type="text" id="segundo_nombre_paciente" class="form-control">
+                        </div>
+                        <div class="col col-xl-6 col-12" style="padding-top:2%;">
+                            <label for="">Primer Apellido</label>
+                            <input type="text" id="primer_apellido_paciente" class="form-control">
+                        </div>
+                        <div class="col col-xl-6 col-12" style="padding-top:2%;">
+                            <label for="">Segundo Apellido</label>
+                            <input type="text" id="segundo_apellido_paciente" class="form-control">
+                        </div>
+                        <div class="col col-xl-6 col-12" style="padding-top:2%;">
+                            <label for="">Celular</label>
+                            <input type="number" id="telefono_paciente" class="form-control">
+                        </div>
+                        <div class="col col-xl-6 col-12" style="padding-top:2%;">
+                            <label for="">Correo</label>
+                            <input type="email" id="correo_paciente" class="form-control">
+                        </div>
+                        <div class="col col-xl-6 col-12" style="padding-top:2%;">
+                            <label for="">Nombre Persona de Contacto</label>
+                            <input type="text" id="nombre_percontac" class="form-control">
+                        </div>
+                        <div class="col col-xl-6 col-12" style="padding-top:2%;">
+                            <label for="">Telefono Persona de Contacto</label>
+                            <input type="text" id="tel_percontac" class="form-control">
+                        </div>
+                    </div>
+                    <div style="padding-top: 3%;">
+                        <button type="button" class="btn btn-success" onclick="actualizarPaciente();">Actualizar</button>
+                        <button type="button" class="btn btn-secondary" onclick="limpiar();">limpiar</button>
+                    </div>
+          </div>
+        </div>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
