--- a/front-end/plantilla CRUD/crudIngreso.html
+++ b/front-end/plantilla CRUD/crudIngreso.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body onload="listarIngreso();">
-    <div class="container">
-        <h1 class="text-center my-4">INGRESO</h1>
-
-        <div class="row mb-4">
-            <div class="col-md-12">
-                <h2>Ingreso de Usuarios</h2>
-                <div class="mb-3">
-                    <button type="button" class="btn btn-primary mr-2">
-                        <a href="../plantilla CRUD/registroIngreso.html" style="color: white; text-decoration: none;">Registrar Nuevo Usuario</a>
-                    </button>
+    <div class="container-xxl" style="padding: 6%; ">
+        <div class="col-md-12">
+            <div class="table tittle">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h1 style="padding-right: 50%;"><b>Medicos Registrados</b></h1>
+                    </div>
+                    <div class="col-sm-6" style="padding-left:35%;">
+                        <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i><h6>Registrar Medico</h6></a>
+                    </div>
                 </div>
-                <table id="userTable border" class="table">
+            </div>
+                <table id="table table-striped table-hover" class="table">
                     <thead>
                         <tr>
                             <th>Id</th>
@@ -51,10 +52,15 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <form id="userForm">
+                <div class="modal fade" id="exampleModal">
+                    <div class="modal-dialog modal-lg">
+                      <div class="modal-content" style="border-radius: 20px; padding: 4%; background-color:rgb(255, 255, 255);">
+                        <div class="modal-body">
+                                <h1 style="padding-top: 5%;"><b>Registrar Medico</b></h1>
+                            <div style="padding: 3%; color:rgb(0, 0, 0);">
+                            <div class="row">
                         <div class="form-group">
-                            <label for="id">ID:</label>
+                            <label for="id">Id</label>
                             <input type="text" id="id" name="id" class="form-control" required>
                         </div>
                         <div class="form-group">
@@ -88,8 +94,11 @@
                                 <option value="inactivo">Inactivo</option>
                             </select>
                         </div>
-                        <button type="submit" class="btn btn-primary">Registrar</button>
-                    </form>
+                        <div style="padding-top: 3%;">
+                            <button type="button" class="btn btn-success" onclick="actualizarIngreso();">Actualizar</button>
+                            <button type="button" class="btn btn-secondary" onclick="limpiar();">limpiar</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
