--- a/front-end/plantilla CRUD/crudMedico.html
+++ b/front-end/plantilla CRUD/crudMedico.html
@@ -12,15 +12,15 @@
 
 </head>
 <body onload="listarMedico();">
-        <div class="container-xxl" style="padding: 6%; ">
+        <div class="container-xxl" style="padding:6%;">
             <div class="col-md-12">
                 <div class="table tittle">
                     <div class="row">
                         <div class="col-sm-6">
                             <h1 style="padding-right: 50%;"><b>Medicos Registrados</b></h1>
                         </div>
-                        <div class="col-sm-6" style="padding-left:35%;">
-                            <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i><h6>Registrar Medico</h6></a>
+                        <div class="col-sm-6" style="padding-left:40%;">
+                            <a href="../plantilla CRUD/registrarMedico.html" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i><h6>Registrar Medico</h6></a>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,6 @@
                 </div>
                 <div style="padding-top: 3%;">
                     <button type="button" class="btn btn-success" onclick="actualizarMedico();">Actualizar</button>
-                    <button type="button" class="btn btn-secondary" onclick="limpiar();">limpiar</button>
                 </div>
             </div>
       </div>
