--- a/front-end/plantilla CRUD/crudMedico.html
+++ b/front-end/plantilla CRUD/crudMedico.html
@@ -5,42 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body onload="listarMedico();">
-    <div class="container">
-        <h1 class="text-center my-4">CRUD MEDICO</h1>
-
-        <div class="row mb-4">
-            <div class="col-md-12">
-                <h2>Usuarios Registrados</h2>
-                <div class="mb-3">
-                    <button type="button" class="btn btn-primary mr-2">
-                        <a href="../plantilla CRUD/registrarMedico.html" style="color: white; text-decoration: none;">Registrar Nuevo Usuario</a>
-                    </button>
-                </div>
-                <table id="userTable border" class="table">
-                    <thead>
-                        <tr>
-                            <td><b>Id</b></td>
-                            <td><b>Documento de Identidad</b></td>
-                            <td><b>Primer Nombre</b></td>
-                            <td><b>Segundo Nombre</b></td>
-                            <td><b>Primer Apellido</b></td>
-                            <td><b>Segundo Apellido</b></td>
-                            <td><b>Correo</b></td>
-                            <td><b>Celular</b></td>
-                            <td><b>Estado</b></td>
-                            <td colspan="2"><b>Acciones</b></td>
-                        </tr>
-                    </thead>
-                    <tbody id="cuerpoTablaMedico">
-                        <!-- Aquí se mostrarán los usuarios registrados -->
-                    </tbody>
-                </table>
+    <h1 class="text-center my-4">CRUD MEDICO</h1>
+    <div class="row mb-4">
+        <div class="col-md-12">
+            <h2>Usuarios Registrados</h2>
+            <div class="mb-3">
+                <button type="button" class="btn btn-primary mr-2">
+                    <a href="../plantilla CRUD/registrarMedico.html" style="color: white; text-decoration: none;">Registrar Nuevo Usuario</a>
+                </button>
             </div>
+            <table id="userTable border" class="table">
+                <thead>
+                    <tr>
+                        <td><b>Id</b></td>
+                        <td><b>Documento de Identidad</b></td>
+                        <td><b>Primer Nombre</b></td>
+                        <td><b>Segundo Nombre</b></td>
+                        <td><b>Primer Apellido</b></td>
+                        <td><b>Segundo Apellido</b></td>
+                        <td><b>Correo</b></td>
+                        <td><b>Celular</b></td>
+                        <td><b>Estado</b></td>
+                        <td colspan="2"><b>Acciones</b></td>
+                    </tr>
+                </thead>
+                <tbody id="cuerpoTablaMedico">
+                    <!-- Aquí se mostrarán los usuarios registrados -->
+                </tbody>
+            </table>
         </div>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../JS/medico.js"></script>
