modificacion filtros y botón deshabilitar medico funciona

--- a/front-end/plantilla CRUD/registrarMedico.html
+++ b/front-end/plantilla CRUD/registrarMedico.html
@@ -15,9 +15,9 @@
     <script src="../js/medico.js"></script>
 </head>
 
-<body style="padding-top: 8%;">
-    <div class="container" style="background-color:rgba(0, 0, 0, 0.698); border-radius: 40px;">
-        <div class="container" style="padding: 7%; color:white;">
+<body style="padding-top: 3%; background-color:rgb(251, 251, 251);">
+    <div class="container-sm" style="background-color:rgba(255, 255, 255, 0.695); border-radius: 40px;">
+        <div class="container" style="padding: 7%; color:rgb(0, 0, 0);">
             <h1 style="padding-top: 5%;"><b>Registrar Medico</b></h1>
         <div class="row">
             <div class="col col-xl-6 col-12" style="padding-top: 2%;">
