--- a/front-end/plantilla CRUD/crudMedico.html
+++ b/front-end/plantilla CRUD/crudMedico.html
@@ -52,7 +52,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content" style="border-radius: 20px; padding: 4%; background-color:rgb(255, 255, 255);">
         <div class="modal-body">
-                <h1 style="padding-top: 5%;"><b>Registrar Medico</b></h1>
+                <h1 style="padding-top: 5%;"><b>Actualizar datos medico</b></h1>
             <div style="padding: 3%; color:rgb(0, 0, 0);">
             <div class="row">
                 <div class="col col-xl-6 col-12" style="padding-top: 2%;">
@@ -99,7 +99,8 @@
             </div>
       </div>
     </div>
-  </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../JS/medico.js"></script>
