--- a/front-end/plantilla CRUD/registrarPaciente.html
+++ b/front-end/plantilla CRUD/registrarPaciente.html
@@ -12,7 +12,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Registro Paciente</title>
-    <script src="../js/paciente.js"></script>
+    <script src="../JS/paciente.js"></script>
 </head>
 
 <body style="padding-top: 8%; background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgb(189, 210, 171) 52%, rgba(255,255,255,1) 100%);">
